# DockerFile

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  setup.py
amigos_project/: __init__.py  constants.py  main.py  requirements.txt
amigos_project/services/classes/: __init__.py  field.py
amigos_project/services/classes/address_book/: __init__.py  address.py  address_book.py  birthday.py  email.py  name.py  phone.py  record.py
amigos_project/services/classes/notes/: __init__.py  notes.py  record.py
amigos_project/services/decorators/: __init__.py  input_error.py
amigos_project/services/handlers/: __init__.py  common.py  notes.py
amigos_project/services/handlers/contacts/: __init__.py  address.py  birthday.py  contact.py  email.py  phone.py
amigos_project/services/utils/: __init__.py  input_parser.py  sort_files.py
