[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = "Amigos_project built with Poetry"
authors = ["Olga Nazarenko <user@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
