[tool.pip]
name = "pip-project"
version = "0.1.0"
description = "Amigos_project built with Pip"
authors = ["Olga Nazarenko <user@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pip_project"}]

[tool.pip.dependencies]
python = "^3.10"


[build-system]
requires = ["pip-core"]
build-backend = "pip.core.masonry.api"
